<resources>
    <string name="app_name">کارت من</string>
    <string name="app_en_name">Card</string>
    <string name="tnx">با تشکر از شما :)</string>
    <string name="create_pass">رمز عبور را انتخاب کنید</string>
    <string name="insert_pass">رمز عبور را وارد کنید</string>
    <string name="developer_name">امیربهادر امیری</string>
    <string name="developer_gmail">bahadoramiri.report@gmail.com</string>
    <string name="about_dev">امیربهادر امیری\nbahadoramiri.report@gmail.com</string>
    <string name="mycards">کارت های من</string>
    <string name="hemayat">حمایت از ما</string>
    <string name="add_card">Add Card</string>
    <string name="copied">کپی شد</string>
    <string name="image_created">تصویر ساخته شد</string>
    <string name="image_notcreated">ساخت تصویر با مشکل مواجه شد</string>
    <string name="about_me">درباره ما</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="pqrs">PQRS</string>
    <string name="mno">MNO</string>
    <string name="ghi">GHI</string>
    <string name="tuv">TUV</string>
    <string name="jkl">JKL</string>
    <string name="abc">ABC</string>
    <string name="wxyz">WXYZ</string>
    <string name="def">DEF</string>
    <string name="insert_new_pass">پسورد جدید را وارد نمایید</string>
    <string name="_1234">1234</string>
    <string name="min">-</string>
    <string name="name_family">نام و نام خانوادگی</string>
    <string name="sabt">ثبت</string>
    <string name="show_video_tab">تماشای تبلیغ ویدیویی برای حمایت از ما</string>
    <string name="show">تماشا</string>
    <string name="delete">حذف</string>
    <string name="create_image">ایجاد تصویر</string>
    <string name="soee_estefade">هر گونه سؤاستفاده پیگرد قانونی خواهد داشت</string>
    <string name="cart_created">کارت ساخته شد</string>
    <string name="card_16num">شماره کارت باید 16 رقمی باشد</string>
    <string name="pass_eshtebah">پسورد اشتباه است</string>
    <string name="pass_plus4">پسورد باید بزرگتر از 4 رقم باشد</string>
    <string name="no_for_android10">این بخش برای اندروید 10 به بالا پیاده سازی نشده است</string>
</resources>