<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.PasswordActivity"
    tools:ignore="UsingOnClickInXml,SpUsage,ContentDescription,TextViewEdits"
    tools:targetApi="lollipop">

    <View
        android:id="@+id/v1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/password_btn_shape"
        android:onClick="printNum"
        app:layout_constraintBottom_toTopOf="@+id/v5"
        app:layout_constraintEnd_toStartOf="@+id/v2"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/v2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/password_btn_shape"
        android:onClick="printNum"
        app:layout_constraintBottom_toTopOf="@+id/v5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/v3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/password_btn_shape"
        android:onClick="printNum"
        app:layout_constraintBottom_toTopOf="@+id/v5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/v2" />

    <View
        android:id="@+id/v4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/password_btn_shape"
        android:onClick="printNum"
        app:layout_constraintBottom_toTopOf="@+id/v8"
        app:layout_constraintEnd_toStartOf="@+id/v5"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/v5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/password_btn_shape"
        android:onClick="printNum"
        app:layout_constraintBottom_toTopOf="@+id/v8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/v6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/password_btn_shape"
        android:onClick="printNum"
        app:layout_constraintBottom_toTopOf="@+id/v8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/v5" />

    <View
        android:id="@+id/v7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/password_btn_shape"
        android:onClick="printNum"
        app:layout_constraintBottom_toTopOf="@+id/v0"
        app:layout_constraintEnd_toStartOf="@+id/v8"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/v8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/password_btn_shape"
        android:onClick="printNum"
        app:layout_constraintBottom_toTopOf="@+id/v0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/v9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/password_btn_shape"
        android:onClick="printNum"
        app:layout_constraintBottom_toTopOf="@+id/v0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/v8" />

    <View
        android:id="@+id/v0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/password_btn_shape"
        android:onClick="printNum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_1"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/v1"
        app:layout_constraintStart_toStartOf="@+id/v1"
        app:layout_constraintTop_toTopOf="@+id/v1" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_2"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/v2"
        app:layout_constraintStart_toStartOf="@+id/v2"
        app:layout_constraintTop_toTopOf="@+id/v2" />

    <TextView
        android:id="@+id/txt_number_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_3"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/v3"
        app:layout_constraintStart_toStartOf="@+id/v3"
        app:layout_constraintTop_toTopOf="@+id/v3" />

    <TextView
        android:id="@+id/txt_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_4"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/v4"
        app:layout_constraintStart_toStartOf="@+id/v4"
        app:layout_constraintTop_toTopOf="@+id/v4" />

    <TextView
        android:id="@+id/txt_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_5"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/v5"
        app:layout_constraintStart_toStartOf="@+id/v5"
        app:layout_constraintTop_toTopOf="@+id/v5" />

    <TextView
        android:id="@+id/txt__6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_6"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/v6"
        app:layout_constraintStart_toStartOf="@+id/v6"
        app:layout_constraintTop_toTopOf="@+id/v6" />

    <TextView
        android:id="@+id/txt_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_7"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/v7"
        app:layout_constraintStart_toStartOf="@+id/v7"
        app:layout_constraintTop_toTopOf="@+id/v7" />

    <TextView
        android:id="@+id/txt_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_8"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/v8"
        app:layout_constraintStart_toStartOf="@+id/v8"
        app:layout_constraintTop_toTopOf="@+id/v8" />

    <TextView
        android:id="@+id/txt_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_9"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/v9"
        app:layout_constraintStart_toStartOf="@+id/v9"
        app:layout_constraintTop_toTopOf="@+id/v9" />

    <TextView
        android:id="@+id/txt_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/v0"
        app:layout_constraintStart_toStartOf="@+id/v0"
        app:layout_constraintTop_toTopOf="@+id/v0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/plus"
        android:textColor="@color/dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/v0"
        app:layout_constraintEnd_toEndOf="@+id/v0"
        app:layout_constraintStart_toStartOf="@+id/v0"
        app:layout_constraintTop_toBottomOf="@+id/txt_0" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/pqrs"
        android:textColor="@color/dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/v7"
        app:layout_constraintEnd_toEndOf="@+id/v7"
        app:layout_constraintStart_toStartOf="@+id/v7"
        app:layout_constraintTop_toBottomOf="@+id/txt_7" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/ghi"
        android:textColor="@color/dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/v4"
        app:layout_constraintEnd_toEndOf="@+id/v4"
        app:layout_constraintStart_toStartOf="@+id/v4"
        app:layout_constraintTop_toBottomOf="@+id/txt_4" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tuv"
        android:textColor="@color/dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/v8"
        app:layout_constraintEnd_toEndOf="@+id/v8"
        app:layout_constraintStart_toStartOf="@+id/v8"
        app:layout_constraintTop_toBottomOf="@+id/txt_8" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/jkl"
        android:textColor="@color/dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/v5"
        app:layout_constraintEnd_toEndOf="@+id/v5"
        app:layout_constraintStart_toStartOf="@+id/v5"
        app:layout_constraintTop_toBottomOf="@+id/txt_5" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/abc"
        android:textColor="@color/dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/v2"
        app:layout_constraintEnd_toEndOf="@+id/v2"
        app:layout_constraintStart_toStartOf="@+id/v2"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/wxyz"
        android:textColor="@color/dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/v9"
        app:layout_constraintEnd_toEndOf="@+id/v9"
        app:layout_constraintStart_toStartOf="@+id/v9"
        app:layout_constraintTop_toBottomOf="@+id/txt_9" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/mno"
        android:textColor="@color/dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/v6"
        app:layout_constraintEnd_toEndOf="@+id/v6"
        app:layout_constraintStart_toStartOf="@+id/v6"
        app:layout_constraintTop_toBottomOf="@+id/txt__6" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/def"
        android:textColor="@color/dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/v3"
        app:layout_constraintEnd_toEndOf="@+id/v3"
        app:layout_constraintStart_toStartOf="@+id/v3"
        app:layout_constraintTop_toBottomOf="@+id/txt_number_code" />

    <ImageView
        android:id="@+id/image_remove"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_baseline_west_64dp"
        app:layout_constraintBottom_toBottomOf="@+id/v0"
        app:layout_constraintEnd_toStartOf="@+id/v0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v0" />

    <ImageView
        android:id="@+id/image_ok"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_baseline_done_64"
        app:layout_constraintBottom_toBottomOf="@+id/v0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/v0"
        app:layout_constraintTop_toTopOf="@+id/v0" />

    <View
        android:id="@+id/v_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:alpha="0.1"
        android:background="@drawable/custom_shape_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/v_icon"
        app:layout_constraintEnd_toEndOf="@+id/v_icon"
        app:layout_constraintStart_toStartOf="@+id/v_icon"
        app:layout_constraintTop_toTopOf="@+id/v_icon"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/txt_err"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_icon" />

    <TextView
        android:id="@+id/txt_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:inputType="numberPassword"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_err" />

    <TextView
        android:id="@+id/about_me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_dev"
        android:textColor="@color/dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v0" />

    <View
        android:id="@+id/vremove"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="remove"
        app:layout_constraintBottom_toBottomOf="@+id/v0"
        app:layout_constraintEnd_toStartOf="@+id/v0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v0" />

    <View
        android:id="@+id/vok"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="ok"
        app:layout_constraintBottom_toBottomOf="@+id/v0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/v0"
        app:layout_constraintTop_toTopOf="@+id/v0" />

</androidx.constraintlayout.widget.ConstraintLayout>