<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cards_items_CardView"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    tools:ignore="VectorDrawableCompat"
    tools:targetApi="lollipop">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/app_logo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/ic_launcher"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/bank_logo"
            app:layout_constraintEnd_toEndOf="@+id/icon_copy"
            app:layout_constraintStart_toStartOf="@+id/icon_share"
            app:layout_constraintTop_toTopOf="@+id/bank_logo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bank_logo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/icon_copy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/icon_copy"
            tools:src="@drawable/bank_meli" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_copy"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:alpha="0.8"
            app:layout_constraintBottom_toBottomOf="@+id/icon_share"
            app:layout_constraintStart_toEndOf="@+id/icon_share"
            app:layout_constraintTop_toTopOf="@+id/icon_share"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_content_copy_64dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_share"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:alpha="0.8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:srcCompat="@drawable/ic_baseline_share_64dp" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bank_logo"
            tools:text="بهادر امیری" />

        <TextView
            android:id="@+id/txt_number_code"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/main_btn_shape"
            android:backgroundTint="@color/ldark"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name"
            tools:text="1 5 2 4  -  4 3 5 3  -  3 3 4 3  -  3 4 6 4" />

        <TextView
            android:id="@+id/txt_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_pic"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_number_code" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/app_logo"
            app:layout_constraintStart_toStartOf="@+id/app_logo"
            app:layout_constraintTop_toBottomOf="@+id/app_logo" />

        <TextView
            android:id="@+id/txt_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_delete"
            app:layout_constraintTop_toBottomOf="@+id/txt_number_code" />

        <TextView
            android:id="@+id/hoshdar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/soee_estefade"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_number_code" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>